--- a/features/default/features.yaml
+++ b/features/default/features.yaml
@@ -7,6 +7,12 @@ flags:
       name: Test-Flag
       type: BOOLEAN_FLAG_TYPE
       enabled: false
+      rollouts:
+        - segment:
+            keys:
+                - AIRAC-2412
+            operator: OR_SEGMENT_OPERATOR
+            value: true
 segments:
     - key: AIRAC-2412
       name: AIRAC-2412
